@@ -31,6 +31,7 @@ New user-visible features
 
 Bugs fixed
 ----------
+- Bug 1294 - New PeekU8 () and Read (Buffer::Iterator start, uint32_t size) methods in Buffer::Iterator
 - Bug 1653 - Extension of CommandLine interface: restored operator << (CommandLine)
 - Bug 1739 - The endpoint is not deallocated for UDP sockets
 - Bug 1786 - os << int64x64_t prints un-normalized fractional values
